@@ -1,3 +1,12 @@
+Sun Jan 30 15:13:19 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* enc/emacs_mule.c (emacsmule_islead): 7bit range is also leading
+	  byte.
+
+Sun Jan 30 12:53:38 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* enc/emacs_mule.c (emacsmule_islead): fix inverse condition.
+
 Sun Jan 30 08:02:55 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* configure.in: Mac OS X wrongly reports it has fdatasync(3).
